--- a/css/main.css
+++ b/css/main.css
@@ -113,20 +113,32 @@ body {
   font-weight: 700;
   display: flex;
 justify-content: space-between;
+
 }
 
 .div-1, .div-2, .div-3 {
   /*give the divs a width of 30%, add display:flex, set justify-content and align-items to center*/
-  color: #fff;
-  line-height: 1.5em;
-  font-size: 1.6em;
-  background-color: #f16059;
+  color: #258e84;
+  line-height: 1.2em;
+  font-size: 1.2em;
+  background-color: #fff;
   width: 30%;
-  height: 300px;
+  height: 250px;
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: left;
+  padding: 20px;
+
 }
+
+.div-2 {
+  border-left: 1px solid gray;
+  border-right: 1px solid gray;
+}
+
+
+
 
 
 
